--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2547,6 +2547,13 @@ outputR = totalGain * outputR;
           </li>
         </ul>
         <br>
+        <h2>PannerNode "HRTF" 패닝 (스테레오만 해당)</h2>
+        <p>이것은 다양한 방위각과 고도에서 녹음된 HRTF (Head-related Transfer Function) 임펄스 응답의 집합을 요구합니다. 구현은 대단히 최적화된 컨볼루션 함수를 요구합니다. 이것은 "equalpower" 보다 다소 비싸지만, 인지적으로 더욱 공간화된 소리를 제공합니다.</p>
+        <figure>
+          <image src="img/HRTF_panner.png" width="644" height="419"></image>
+          <figcaption><strong>도식 20</strong> HRTF를 사용하여 소스를 패닝하는 과정을 보여주는 도식</figcaption>
+        </figure>
+        <br>
       </div>
     </main>
   </body>
