--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2480,9 +2480,9 @@ else if (elevation < -90)
         <p>모노→스테레오 그리고 스테레오→스테레오 패닝이 반드시 지원되어야만 합니다. 모노→스테레오 프로세싱은 입력에의 모든 연결이 모노일 때 사용됩니다. 그렇지 않으면 스테레오→스테레오 프로세싱이 사용됩니다.</p>
         <h3>6.3.1. PannerNode "equalpower" 패닝</h3>
         <p>이것은 기본적이나, 합리적인 결과를 제공하는 단순하고 비교적 저렴한 알고리즘입니다. 이것은 panningModel 어트리뷰트가 "equalpower" 로 설정되어 있어, 고도 값이 무시되는 상황에 PannerNode가 사용합니다. 이 알고리즘은 automationRate에 의해 명시된 것과 같은 적절한 비율을 사용해 구현되어야만 합니다. 만약 PannerNode의 AudioParam이나 AudioListener의 AudioParam 중 하나라도 "a-rate"라면, a-rate 프로세싱이 반드시 사용되어야만 합니다.</p>
-        <ul>
+        <ol>
           <li>이 AudioNode에 의해 계산될 각 샘플에 대해:
-            <ul>
+            <ol>
               <li>azimuth가 방위각과 고도 섹션에서 계산된 값이라고 합시다.</li>
               <li>방위각 값은 우선 다음에 따라 범위 [-90, 90] 내에 포함됩니다:
                 <pre>
@@ -2543,16 +2543,66 @@ outputL = totalGain * outputL;
 outputR = totalGain * outputR;
                 </pre>
               </li>
-            </ul>
+            </ol>
           </li>
-        </ul>
+        </ol>
         <br>
-        <h2>PannerNode "HRTF" 패닝 (스테레오만 해당)</h2>
+        <h2>6.3.2. PannerNode "HRTF" 패닝 (스테레오만 해당)</h2>
         <p>이것은 다양한 방위각과 고도에서 녹음된 HRTF (Head-related Transfer Function) 임펄스 응답의 집합을 요구합니다. 구현은 대단히 최적화된 컨볼루션 함수를 요구합니다. 이것은 "equalpower" 보다 다소 비싸지만, 인지적으로 더욱 공간화된 소리를 제공합니다.</p>
         <figure>
           <image src="img/HRTF_panner.png" width="644" height="419"></image>
           <figcaption><strong>도식 20</strong> HRTF를 사용하여 소스를 패닝하는 과정을 보여주는 도식</figcaption>
         </figure>
+        <br>
+        <h2>6.3.3. StereoPannerNode 패닝</h2>
+        <p>StereoPannerNode에 대해서, 다음의 알고리즘이 반드시 구현되어야만 합니다.</p>
+        <ol>
+          <li>이 AudioNode에 의해 계산될 각 샘플에 대해서
+            <ol>
+              <li>이 StereoPannerNode의 pan AudioParam의 computedValue를 pan이라고 합시다.</li>
+              <li>pan을 [-1, 1] 로 조정합니다.
+                <pre>
+pan = max(-1, pan);
+pan = min(1, pan);
+                </pre>
+              </li>
+              <li>pan 값을 [0, 1] 로 정규화함으로써 x를 계산합니다. 모노 입력에 대해:
+                <pre>
+x = (pan + 1) / 2;
+                </pre>
+                스테레오 입력에 대해:
+                <pre>
+if (pan <= 0)
+  x = pan + 1;
+else
+  x = pan;
+                </pre>
+              </li>
+              <li>좌측과 우측 gain 값은 다음과 같이 계산됩니다:
+                <pre>
+gainL = cos(x * Math.PI / 2);
+gainR = sin(x * Math.PI / 2);
+                </pre>
+              </li>
+              <li>모노 입력에 대해, 스테레오 출력은 다음과 같이 계산됩니다:
+                <pre>
+outputL = input * gainL;
+outputR = input * gainR;
+                </pre>
+                혹은 스테레오 입력에 대해, 출력은 다음과 같이 계산됩니다.
+                <pre>
+if (pan <= 0) {
+  outputL = inputL + inputR * gainL;
+  outputR = inputR * gainR;
+} else {
+  outputL = inputL * gainL;
+  outputR = inputR + inputL * gainR;
+}
+                </pre>
+              </li>
+            </ol>
+          </li>
+        </ol>
         <br>
       </div>
     </main>
