--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2621,6 +2621,8 @@ function distance(panner) {
         <p>거리는 그리고 나서 distanceGain을 계산하기 위해 사용되는데 distanceGain은 distanceModel 어트리뷰트에 좌우됩니다. 각 거리 모델이 계산되는 방법에 대한 자세한 자상은 DistanceModelType 섹션을 참고하세요.</p>
         <p>이것의 프로세싱의 일부로서, PannerNode는 입력 오디오 신호를 distanceGain만큼 크기를 조정/곱해서 멀리 있는 소리를 조용하게 하고 가까운 소리를 크게 만듭니다.</p>
         <br>
+        <h2>6.5. 소리 cone</h2>
+        <p>리스너와 각 음원은 어떤 방향으로 자신이 향하고 있는지를 기술하는 방향 벡터를 가지고 있습니다. 각 음원의 소리 사영 특징은 음원의 방향 벡터로부터의 음원/리스너 각도의 함수로서 소리 강도를 기술하는 안 그리고 바깥 "cone"에 의해 기술됩니다. 따라서, 리스너를 직접적으로 가리키는 음원은 off-axis를 가리킬 때보다 더 큽니다. 음원은 또한 전방향일 수 있습니다.</p>
       </div>
     </main>
   </body>
