--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2669,6 +2669,14 @@ function coneGain() {
 }
         </pre>
         <br>
+        <h1>7. 성능 고려</h1>
+        <h2>7.1. 레이턴시</h2>
+        <figure>
+          <img src="img/latency.png" width="700" height="201">
+          <figcaption><strong>도식 22</strong> 레이턴시가 중요할 수 있는 사용 경우</figcaption>
+        </figure>
+        <p>웹 어플리케이션에서, 마우스와 키보드 이벤트 (키다운, 마우스다운 등) 과 들리는 소리 사이의 시간 지연은 중요합니다.</p>
+        <p>이 시간 지연을 레이턴시라고 부르며 몇 가지 요소들에 의해 유발되고 (입력 장치 레이턴시, 내부 버퍼링 레이턴시, DSP 프로세싱 레이턴시, 출력 장치 레이턴시, 스피커와 사용자의 귀 사이의 거리 등), 이것은 누적됩니다. 레이턴시가 클수록 유저의 경험은 덜 만족스러워질 것입니다. 극단적으로는, 레이턴시는 음악 생성이나 게임 플레이를 불가능하게 만들 수도 있습니다. 적당한 수준에서 레이턴시는 타이밍에 영향을 끼칠 수 있고 소리가 처지거나 게임이 반응적이지 않은 느낌을 줄 수 있습니다. 음악 어플리케이션에서 타이밍 문제는 리듬에 영향을 줍니다. 게임에서 타이밍 문제는 게임 플레이의 정확성에 영향을 줍니다. 상호작용을 하는 어플리케이션에서, 레이턴시는 아주 느린 애니메이션 프레임 레이트가 하는 것과 같은 방식으로 유저의 경험을 대단히 낮춥니다. 어플리케이션에 따라, 합리적인 레이턴시는 3-6 밀리초의 낮은 것부터 25-50 밀리초까지 될 수 있습니다.</p>
       </div>
     </main>
   </body>
