--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2677,6 +2677,20 @@ function coneGain() {
         </figure>
         <p>웹 어플리케이션에서, 마우스와 키보드 이벤트 (키다운, 마우스다운 등) 과 들리는 소리 사이의 시간 지연은 중요합니다.</p>
         <p>이 시간 지연을 레이턴시라고 부르며 몇 가지 요소들에 의해 유발되고 (입력 장치 레이턴시, 내부 버퍼링 레이턴시, DSP 프로세싱 레이턴시, 출력 장치 레이턴시, 스피커와 사용자의 귀 사이의 거리 등), 이것은 누적됩니다. 레이턴시가 클수록 유저의 경험은 덜 만족스러워질 것입니다. 극단적으로는, 레이턴시는 음악 생성이나 게임 플레이를 불가능하게 만들 수도 있습니다. 적당한 수준에서 레이턴시는 타이밍에 영향을 끼칠 수 있고 소리가 처지거나 게임이 반응적이지 않은 느낌을 줄 수 있습니다. 음악 어플리케이션에서 타이밍 문제는 리듬에 영향을 줍니다. 게임에서 타이밍 문제는 게임 플레이의 정확성에 영향을 줍니다. 상호작용을 하는 어플리케이션에서, 레이턴시는 아주 느린 애니메이션 프레임 레이트가 하는 것과 같은 방식으로 유저의 경험을 대단히 낮춥니다. 어플리케이션에 따라, 합리적인 레이턴시는 3-6 밀리초의 낮은 것부터 25-50 밀리초까지 될 수 있습니다.</p>
+        <p>구현은 보통 전반적인 레이턴시를 최소화하는 것을 추구할 것입니다.</p>
+        <p>전반적인 레이턴시를 최소화하는 것과 함께, 구현은 보통 AudioContext의 currentTime과 AudioProcessingEvent의 playbackTime 사이의 차이를 최소화하기를 추구할 것입니다. ScriptProcessorNode의 폐지는 시간이 흐름에 따라 이 고려를 덜 중요하게 만들 것입니다.</p>
+        <p>추가적으로, 몇몇 AudioNode들은 오디오 그래프의 몇몇 경로에 레이턴시를 추가할 수 있습니다. 주목할만한 것으로는,</p>
+        <ul>
+          <li>AudioWorkletNode는 내부적으로 버퍼링을 해, 신호 경로에 지연을 추가하는 스크립트를 실행할 수 있습니다.</li>
+          <li>DelayNode의 역할은, 제어된 레이턴시를 추가하는 것입니다.</li>
+          <li>BiquadFilterNode와 IIRFilterNode 필터 디자인은 인과적 필터링 프로세스의 자연스러운 결과로서 들어오는 샘플을 지연시킬 수 있습니다.</li>
+          <li>ConvolverNode는, 임펄스에 따라, 컨볼루션 연산의 자연적인 결과로서, 들어오는 샘플을 지연시킬 수 있습니다.</li>
+          <li>DynamicsCompressorNode는 신호 경로에서 딜레이를 유발하는 내다보기(look ahead) 알고리즘을 가지고 있습니다.</li>
+          <li>MediaStreamAudioSourceNode, MediaStreamTrackAudioSourceNode, MediaStreamAudioDestinationNode는, 구현에 따라, 지연을 추가하는 버퍼를 내부적으로 추가할 수 있습니다.</li>
+          <li>ScriptProcessorNode는 컨트롤 스레드와 렌더링 스레드 사이에서 버퍼를 가질 수 있습니다.</li>
+          <li>WaveShaperNode는, 오버샘플링일 때, 그리고 오버샘플링 기법에 따라, 신호 경로에 지연을 추가합니다.</li>
+        </ul>
+        <br>
       </div>
     </main>
   </body>
