--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2691,6 +2691,10 @@ function coneGain() {
           <li>WaveShaperNode는, 오버샘플링일 때, 그리고 오버샘플링 기법에 따라, 신호 경로에 지연을 추가합니다.</li>
         </ul>
         <br>
+        <h2>7.2. 오디오 버퍼 복사</h2>
+        <p>컨텐츠 획득 동작이 AudioBuffer에서 수행되었을 때, 전체 동작은 보통 채널 데이터를 복사하는 일 없이 구현됩니다. 특히, 마지막 단계는 다음 getChannelData() 호출에서 느리게 수행되어야 합니다. 이것은 개입하는 getChannelData()가 없는 일련의 연이은 컨텐츠 획득 동작 (예: 같은 AudioBuffer를 재생하는 다수의 AudioBufferSourceNode들) 이 할당이나 복사 없이 구현될 수 있음을 의미합니다.</p>
+        <p>구현은 추가적인 최적화를 수행할 수 있습니다: 만약 getChannelData()가 AudioBuffer에서 호출된다면, 새로운 ArrayBuffer들은 아직 할당되지 않았지만, AudioBuffer에서의 이전 컨텐츠 획득 동작의 모든 호출자들은 AudioBuffer의 데이터를 사용하는 것을 멈추고, 원시 데이터 버퍼가 새로운 AudioBuffer와의 사용을 위해 재사용되며, 채널 데이터의 어떠한 재할당이나 복사를 방지합니다.</p>
+        <br>
       </div>
     </main>
   </body>
