--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2699,6 +2699,9 @@ function coneGain() {
         <p>AudioParam의 value 어트리뷰트를 직접 설정할 때 어떠한 자동적 smoothing도 이루어지지 않는 반면, 특정한 파라미터에 대해, 부드러운 전이가 값을 직접 설정하는 것에 비해 선호됩니다.</p>
         <p>setTargetAtTime() 메서드를 낮은 timeConstant와 사용하는 것은 작성자로 하여금 부드러운 전이를 수행할 수 있게 해 줍니다.</p>
         <br>
+        <h2>7.4. 오디오 깨짐(glitch)</h2>
+        <p>오디오 깨짐은 보통의 연속적인 오디오 스트림의 중단에 의해 유발되고, 큰 소리의 클릭 소리와 팝 소리를 유발합니다. 오디오 깨짐은 멀티미디어 시스템의 재앙적 실패로 여겨지고 반드시 방지되어야만 합니다. 오디오 깨짐은 오디오 스트림을 하드웨어에 전송하는 책임이 있는 스레드에서의 문제에 의해 유발될 수 있는데, 그 예로는 적절한 우선도와 시간 제약을 가지고 있지 않은 스레드에 의해 유발되는 레이턴시 스케쥴링과 같은 것이 있습니다. 이것은 또한 CPU 속도를 고려했을 때 가능한 것보다 더 많은 작업을 하려고 시도하는 오디오 DSP에 의해 유발될 수도 있습니다.</p>
+        <br>
       </div>
     </main>
   </body>
