--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2702,6 +2702,31 @@ function coneGain() {
         <h2>7.4. 오디오 깨짐(glitch)</h2>
         <p>오디오 깨짐은 보통의 연속적인 오디오 스트림의 중단에 의해 유발되고, 큰 소리의 클릭 소리와 팝 소리를 유발합니다. 오디오 깨짐은 멀티미디어 시스템의 재앙적 실패로 여겨지고 반드시 방지되어야만 합니다. 오디오 깨짐은 오디오 스트림을 하드웨어에 전송하는 책임이 있는 스레드에서의 문제에 의해 유발될 수 있는데, 그 예로는 적절한 우선도와 시간 제약을 가지고 있지 않은 스레드에 의해 유발되는 레이턴시 스케쥴링과 같은 것이 있습니다. 이것은 또한 CPU 속도를 고려했을 때 가능한 것보다 더 많은 작업을 하려고 시도하는 오디오 DSP에 의해 유발될 수도 있습니다.</p>
         <br>
+        <h1>8. 보안과 프라이버시 고려 사항</h1>
+        <p>셀프 리뷰 질문표: 보안과 프라이버시 §질문들에 대해:</p>
+        <ol>
+          <li>이 명세는 개인을 식별할 수 있는 정보를 다룹니까?
+            <p>Web Audio API를 사용함으로써 청각 테스트를 수행하여, 따라서 개인이 들을 수 있는 주파수 범위 (이것은 노화에 따라 감소합니다) 를 드러내는 것은 가능합니다. 이것이 유저의 인지와 동의 없이 이루어질 수 있다고 보는 것은 어렵습니다. 왜냐하면 이것은 능동적인 참여를 요구하기 때문입니다.</p>
+          </li>
+          <li>이 명세는 가치가 높은 데이터를 다룹니까?
+            <p>아닙니다. 신용 카드 정보와 같은 것은 Web Audio에서 사용되지 않습니다. Web Audio를 사용해 음성 데이터를 처리하고 분석하는 것은 가능하고, 이는 프라이버시 우려일 수 있지만, 사용자의 마이크에의 접근은 getUserMedia()를 통한 허가 기반입니다.</p>
+          </li>
+          <li>이 명세는 브라우징 세션을 가로질러 지속되는 origin에 대한 새로운 상태를 도입합니까?
+            <p>아닙니다. AudioWorklet은 브라우징 세션을 가로질러 지속되지 않습니다.</p>
+          </li>
+          <li>이 명세는 웹에 지속되고, cross-origin인 상태를 노출시킵니까?
+            <p>그렇습니다. 지원되는 오디오 샘플 레이트와 출력 장치 채널 카운트가 노출됩니다. AudioContext를 참고하십시오.</p>
+          </li>
+          <li>이 명세는 origin에 origin이 현재 접근하고 있지 않은 다른 데이터를 노출시킵니까?
+            <p>그렇습니다. 사용 가능한 AudioNode에서의 다양한 정보를 고려할 때, Web Audio API는 잠재적으로 클라이언트의 특징적인 특성들에 대한 정보 (이를테면 오디오 하드웨어 샘플 레이트와 같은) 를 AudioNode 인터페이스를 사용하는 모든 페이지에 노출시킵니다. 추가적으로, 타이밍 정보가 AnalyserNode 또는 ScriptProcessorNode 인터페이스를 통해 수집될 수 있습니다. 이 정보는 나중에 클라이언트의 fingerprint를 생성하는 데 사용될 수 있습니다.</p>
+            <br>
+            <p>Princeton CITP의 웹 투명성 및 책임 프로젝트에 의한 연구는 DynamicsCompressorNode와 OscillatorNode가 클라이언트로부터 엔트로피를 수집하는 데 사용되어 기기를 fingerpirnt할 수 있음을 보여주었습니다. 이것은 작고, 보통 들리지 않는, 상이한 구현들 사이의 DSP 아키텍쳐, 리샘플링 전략, rounding trade-off에서의 차이에 기인합니다. 사용된 정밀한 컴파일러 플래그와 CPU 아키텍쳐 (ARM 대 x86) 또한 이 엔트로피에 기여합니다.</p>
+            <br>
+            <p>그러나 실제로는, 이것은 단지 더 쉬운 수단 (User Agent string) 에 의해 이미 손쉽게 사용 가능한 정보의 추론, 예를 들자면 "이것은 플랫폼 Y에서 실행 중인 브라우저 X이다", 만을 허용할 뿐입니다. 그러나, 추가적인 fingerprinting의 가능성을 줄이기 위해, 우리는 브라우저에게 모든 노드의 출력으로부터 가능할지도 모르는 fingerprinting 문제를 완화하도록 조치를 취할 것을 지시합니다.</p>
+            <br>
+          </li>
+        </ol>
+        <br>
       </div>
     </main>
   </body>
