--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2724,6 +2724,21 @@ function coneGain() {
             <br>
             <p>그러나 실제로는, 이것은 단지 더 쉬운 수단 (User Agent string) 에 의해 이미 손쉽게 사용 가능한 정보의 추론, 예를 들자면 "이것은 플랫폼 Y에서 실행 중인 브라우저 X이다", 만을 허용할 뿐입니다. 그러나, 추가적인 fingerprinting의 가능성을 줄이기 위해, 우리는 브라우저에게 모든 노드의 출력으로부터 가능할지도 모르는 fingerprinting 문제를 완화하도록 조치를 취할 것을 지시합니다.</p>
             <br>
+            <p>clock skew를 통한 fingerprinting이 Steven J Murdoch와 Sebastian Zander에 의해 설명되었습니다. getOutputTimestamp로부터 이것을 결정하는 것이 가능할지도 모릅니다. 또한 skew 기반의 fingerprinting은 HTML에 대해 Nakibly et. al. 에 의해 시연되었습니다. High-Resolution Time §7 프라이버시 및 보안 섹션이 clock resolution과 drift에 대한 추가적인 정보를 위해 참고될 수 있습니다.</p>
+            <br>
+            <p>레이턴시를 통한 fingerprinting이 또한 가능합니다. 이것을 baseLatency와 outputLatency로부터 추론하는 것이 가능할지도 모릅니다. 완화 전략은 jitter (디더링) 와 양자화를 추가하여 정확한 skew가 올바르지 않게 기록되도록 하는 것을 포함합니다. 그러나 대부분의 오디오 시스템은 Web Audio에 의해 생성된 오디오와, 다른 오디오나 비디오 소스 또는 시각적 신호 (예를 들자면 게임, 오디오 녹음, 음악 제작 환경에서) 를 동기화하기 위해 낮은 레이턴시를 지향한다는 것에 주의하십시오. 지나친 레이턴시는 유용성을 낮추고 접근성 문제가 될 수도 있습니다.</p>
+            <br>
+            <p>AudioContext의 샘플 레이트를 통한 fingerprinting이 또한 가능합니다. 우리는 이것을 최소화하기 위해 다음의 절차가 취해질 것을 추천합니다.</p>
+            <ol>
+              <li>44.1 kHz와 48 kHz가 기본 레이트로 허용됩니다. 시스템은 최선의 적용성을 위해 둘 사이에서 선택할 것입니다. (분명히, 만약 오디오 장치가 원래 44.1이라면, 44.1이 선택될 것이지만, 또한 시스템은 가장 "호환이 되는" 레이트를 선택할 수도 있습니다—예를 들어, 만약 시스템이 원래 96kHz라면, 44.1kHz가 아니라, 48kHz가 선택될 공산이 큽니다.</li>
+              <li>시스템은 원래부터 다른 레이트인 장치들에 대해 이 두 레이트 중 하나로 리샘플링해야 하고, 이것이 리샘플링된 오디오에 기인한 추가적인 배터리 drain을 유발할 수도 있다는 사실에도 불구하고 그렇습니다. (다시 말하지만, 시스템은 가장 호환되는 레이트를 선택할 것입니다—만약 네이티브 시스템이 16kHz라면, 48kHz가 선택될 것이 기대됩니다.)</li>
+              <li>(명령되는 것은 아니지만) 브라우저가 네이티브 레이트의 사용을 강제하는 사용자 여유를 제공하는 것이 기대됩니다—예를 들어 장치의 브라우저에서 플래그를 설정함으로써. 이 설정은 API에 의해 노출되지 않을 것입니다.</li>
+              <li>상이한 레이트가 명시적으로 AudioContext의 생성자에서 요구될 수 있음이 또한 기대되는 동작이며 (이것은 이미 명세에 있습니다. 이것은 보통 오디오 렌더링이 요청된 sampleRate에서 이루어지고, 그리고 나서 장치 출력에 대해 업샘플링 혹은 다운샘플링되는 것을 유발합니다), 만약 이 레이트가 원래 지원된다면, 렌더링은 바로 통과될 수 있습니다. 이것은 앱이 사용자의 조정 없이 더 높은 레이트로 렌더링하는 것을 가능케 할 것입니다. (물론 오디오 출력이 출력에서 다운샘플링되는 것은 Web Audio에서 관측불가능합니다)—예를 들어, 만약 MediaDevices 가능성이 (사용자의 조정과 함께) 읽혔고 나타났었다면 더 높은 레이트는 지원되었을 것입니다.</li>
+            </ol>
+            <p>AudioContext의 출력 채널의 수를 통한 fingerprinting이 또한 가능합니다. 우리는 maxChannelCount가 2 (스테레오) 로 설정될 것을 추천합니다. 스테레오는 단연 가장 흔한 채널 수입니다.</p>
+          </li>
+          <li>이 명세는 새로운 스크립트 실행/로딩 메커니즘을 가능케 합니까?
+            <p>아닙니다. 이것은 물론 [HTML] 스크립트 실행 메서드를 사용하고, 이는 저 명세에 정의되어 있습니다.</p>
           </li>
         </ol>
         <br>
