--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2740,6 +2740,13 @@ function coneGain() {
           <li>이 명세는 새로운 스크립트 실행/로딩 메커니즘을 가능케 합니까?
             <p>아닙니다. 이것은 물론 [HTML] 스크립트 실행 메서드를 사용하고, 이는 저 명세에 정의되어 있습니다.</p>
           </li>
+          <li>이 명세는 사용자의 위치에 대한 origin 접근을 허용합니까?
+            <p>아닙니다.</p>
+          </li>
+          <li>이 명세는 사용자의 기기의 센서에 대한 origin 접근을 허용합니까?
+            <p>직접적으로는 아닙니다. 현재, 오디오 입력은 이 문서에서 명시되지 않았지만, 이것은 클라이언트 기계의 오디오 입력 또는 마이크에의 접근을 얻는 것을 포함합니다. 이것은 유저에게 적절한 방법으로 허락을 물어보는 것을 요구할 것입니다. 그 방법은 아마도 getUserMedia() API를 통한 것입니다.</p>
+            <p>추가적으로, Media Capture and Streams 명세로부터의 보안 그리고 프라이버시 고려 사항이 주목되어야 합니다. 특히, 주변 오디오의 분석 또는 고유한 오디오를 재생하는 것은 사용자의 위치의 식별을 가능하게 하며, 그 수준은 방(room)의 수준에까지 혹은 심지어 다른 사용자나 기기에 의한 방의 동시 점유까지입니다. 또한 오디오 출력과 오디오 입력에의 동시 접근은 한 브라우저에서 분할된 다른 컨텍스트 사이의 소통을 가능케 할 지도 모릅니다.</p>
+          </li>
         </ol>
         <br>
       </div>
