--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2747,6 +2747,10 @@ function coneGain() {
             <p>직접적으로는 아닙니다. 현재, 오디오 입력은 이 문서에서 명시되지 않았지만, 이것은 클라이언트 기계의 오디오 입력 또는 마이크에의 접근을 얻는 것을 포함합니다. 이것은 유저에게 적절한 방법으로 허락을 물어보는 것을 요구할 것입니다. 그 방법은 아마도 getUserMedia() API를 통한 것입니다.</p>
             <p>추가적으로, Media Capture and Streams 명세로부터의 보안 그리고 프라이버시 고려 사항이 주목되어야 합니다. 특히, 주변 오디오의 분석 또는 고유한 오디오를 재생하는 것은 사용자의 위치의 식별을 가능하게 하며, 그 수준은 방(room)의 수준에까지 혹은 심지어 다른 사용자나 기기에 의한 방의 동시 점유까지입니다. 또한 오디오 출력과 오디오 입력에의 동시 접근은 한 브라우저에서 분할된 다른 컨텍스트 사이의 소통을 가능케 할 지도 모릅니다.</p>
           </li>
+          <li>이 명세는 사용자의 로컬 컴퓨팅 환경의 측면에 대한 origin 접근을 허용합니까?
+            <p>직접적으로는 아닙니다. 모든 요청된 샘플 레이트는 지원되고, 만약 필요하다면 업샘플링됩니다. MediaTrackSupportedConstraints와 동반하는 지원되는 오디오 샘플 레이트를 찾기 위해 Media Capture and Streams를 사용하는 것은 가능합니다. 이것은 명시적인 사용자 동의를 요구합니다. 이것은 물론 조금 정도의 fingerprinting을 제공합니다. 그러나, 실제로는 대부분의 소비자와 프로슈머 기기는 두 개의 표준화된 샘플 레이트 중 하나를 사용합니다. 그것은 44.1kHz (CD에서 원래 사용됨) 와 48kHz (DAT에서 원래 사용됨) 입니다. highly resource constrained 장치는 음성 품질의 11kHz 샘플 레이트를 지원할 수도 있고, higher-end 장치는 종종 88.2, 96, 또는 오디오 애호가의 192kHz 레이트를 지원합니다.</p>
+            <p>48kHz와 같은 하나의, 공통적으로 지원되는 레이트를 업샘플링하기 위해 모든 구현을 요구하는 것은 특별한 이득 없이 CPU 비용을 증가시킬 것이고, higher-end 장치에서 낮은 레이트를 사용하기를 요구하는 것은 단지 Web Audio를 전문적인 사용에 적합하지 않다고 딱지붙이는 결과를 낳을 뿐일 것입니다.</p>
+          </li>
         </ol>
         <br>
       </div>
