--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2751,6 +2751,12 @@ function coneGain() {
             <p>직접적으로는 아닙니다. 모든 요청된 샘플 레이트는 지원되고, 만약 필요하다면 업샘플링됩니다. MediaTrackSupportedConstraints와 동반하는 지원되는 오디오 샘플 레이트를 찾기 위해 Media Capture and Streams를 사용하는 것은 가능합니다. 이것은 명시적인 사용자 동의를 요구합니다. 이것은 물론 조금 정도의 fingerprinting을 제공합니다. 그러나, 실제로는 대부분의 소비자와 프로슈머 기기는 두 개의 표준화된 샘플 레이트 중 하나를 사용합니다. 그것은 44.1kHz (CD에서 원래 사용됨) 와 48kHz (DAT에서 원래 사용됨) 입니다. highly resource constrained 장치는 음성 품질의 11kHz 샘플 레이트를 지원할 수도 있고, higher-end 장치는 종종 88.2, 96, 또는 오디오 애호가의 192kHz 레이트를 지원합니다.</p>
             <p>48kHz와 같은 하나의, 공통적으로 지원되는 레이트를 업샘플링하기 위해 모든 구현을 요구하는 것은 특별한 이득 없이 CPU 비용을 증가시킬 것이고, higher-end 장치에서 낮은 레이트를 사용하기를 요구하는 것은 단지 Web Audio를 전문적인 사용에 적합하지 않다고 딱지붙이는 결과를 낳을 뿐일 것입니다.</p>
           </li>
+          <li>이 명세는 다른 장치에 대한 origin 접근을 허용합니까?
+            <p>이것은 보통 다른 네트워크 장치에 대한 접근을 허용하지 않습니다 (하나의 예외로 high-end 녹음 스튜디오는 Dante 네트워크 장치일지도 모릅니다. 비록 이 장치들이 보통 별도의, 특정 작업용 네트워크를 사용하긴 하지만요). 이것은 필연적으로 사용자의 오디오 출력 장치나 때때로 컴퓨터에 별도의 유닛인 장치들에 대한 접근을 허용합니다.</p>
+            <p>음성이나 소리를 작동시키는 장치에 대해서, Web Audo API는 다른 장치들을 제어하기 위해 사용될 지도 모릅니다. 추가적으로, 만약 소리를 생성하는 장치가 초음파에 근접한 주파수에 민감하다면, 그러한 제어는 들리지 않을 지도 모릅니다. 이 가능성은 또한 HTML과 함께 존재하고, 이는 $lt;audio$gt; 또는 $lt;video$gt; 요소를 통한 것입니다. 일반적인 오디오 샘플링 레이트에서, 많은 초음파 정보에 대해 (디자인에 따라) 불충분한 헤드룸이 있습니다.</p>
+            <p>인간 청각의 한계는 보통 20kHz로 서술됩니다. 44.1kHz 샘플링 레이트에 대해, 나이퀴스트 한계는 22.05kHz입니다. true brickwall 필터가 물리적으로 실현될 수 없음을 고려할 때, 20kHz와 22.05kHz 사이의 공간은 빠른 rolloff 필터에 사용되어 나이퀴스트 위의 모든 주파수를 강력하게 약화시킵니다.</p>
+            <p>48kHz 샘플링 레이트에서, 20kHz에서 24kHz 밴드에서 여전히 빠른 약화가 있습니다 (하지만 passband에서의 위상 ripple error를 방지하는 것이 더 쉽습니다).</p>
+          </li>
         </ol>
         <br>
       </div>
