--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2753,9 +2753,30 @@ function coneGain() {
           </li>
           <li>이 명세는 다른 장치에 대한 origin 접근을 허용합니까?
             <p>이것은 보통 다른 네트워크 장치에 대한 접근을 허용하지 않습니다 (하나의 예외로 high-end 녹음 스튜디오는 Dante 네트워크 장치일지도 모릅니다. 비록 이 장치들이 보통 별도의, 특정 작업용 네트워크를 사용하긴 하지만요). 이것은 필연적으로 사용자의 오디오 출력 장치나 때때로 컴퓨터에 별도의 유닛인 장치들에 대한 접근을 허용합니다.</p>
-            <p>음성이나 소리를 작동시키는 장치에 대해서, Web Audo API는 다른 장치들을 제어하기 위해 사용될 지도 모릅니다. 추가적으로, 만약 소리를 생성하는 장치가 초음파에 근접한 주파수에 민감하다면, 그러한 제어는 들리지 않을 지도 모릅니다. 이 가능성은 또한 HTML과 함께 존재하고, 이는 $lt;audio$gt; 또는 $lt;video$gt; 요소를 통한 것입니다. 일반적인 오디오 샘플링 레이트에서, 많은 초음파 정보에 대해 (디자인에 따라) 불충분한 헤드룸이 있습니다.</p>
+            <p>음성이나 소리를 작동시키는 장치에 대해서, Web Audo API는 다른 장치들을 제어하기 위해 사용될 지도 모릅니다. 추가적으로, 만약 소리를 생성하는 장치가 초음파에 근접한 주파수에 민감하다면, 그러한 제어는 들리지 않을 지도 모릅니다. 이 가능성은 또한 HTML과 함께 존재하고, 이는 &lt;audio&gt; 또는 &lt;video&gt; 요소를 통한 것입니다. 일반적인 오디오 샘플링 레이트에서, 많은 초음파 정보에 대해 (디자인에 따라) 불충분한 헤드룸이 있습니다.</p>
             <p>인간 청각의 한계는 보통 20kHz로 서술됩니다. 44.1kHz 샘플링 레이트에 대해, 나이퀴스트 한계는 22.05kHz입니다. true brickwall 필터가 물리적으로 실현될 수 없음을 고려할 때, 20kHz와 22.05kHz 사이의 공간은 빠른 rolloff 필터에 사용되어 나이퀴스트 위의 모든 주파수를 강력하게 약화시킵니다.</p>
             <p>48kHz 샘플링 레이트에서, 20kHz에서 24kHz 밴드에서 여전히 빠른 약화가 있습니다 (하지만 passband에서의 위상 ripple error를 방지하는 것이 더 쉽습니다).</p>
+          </li>
+          <li>이 명세는 origin에게 user agent의 native UI에 대한 얼마간의 제어를 허용합니까?
+            <p>만약 UI가 voice assistant 혹은 스크린리더같은 오디오 컴포넌트를 가지고 있다면, Web Audio API는 공격이 더욱 로컬 시스템 이벤트처럼 보이도록 만들기 위해 native UI의 측면을 모방하기 위해 사용될 지도 모릅니다. 이 가능성은 또한 &lt;audio&gt;요소에 의해 HTML에서도 존재합니다.</p>
+          </li>
+          <li>이 명세는 웹에 temporary identifier를 노출시킵니까?
+            <p>아닙니다.</p>
+          </li>
+          <li>이 명세는 first-party와 third-party 컨텍스트에서의 행동을 구별합니까?
+            <p>아닙니다.</p>
+          </li>
+          <li>이 명세는 user agent의 "incognito" 모드에서 어떻게 다르게 작동합니까?
+            <p>다르지 않습니다.</p>
+          </li>
+          <li>이 명세는 사용자의 로컬 기기에 데이터를 지속시킵니까?
+            <p>아닙니다.</p>
+          </li>
+          <li>이 명세는 "보안 고려 사항"과 "프라이버시 고려 사항" 섹션을 가지고 있습니까?
+            <p>네 (지금 읽고 계십니다).</p>
+          </li>
+          <li>이 명세는 기본 보안 특징들을 다운그레이딩하는 것을 허용합니까?
+            <p>아닙니다.</p>
           </li>
         </ol>
         <br>
